# next_word_prediction

./: .gitignore  README.md  Report-final.md  Report.md  inference.py  pyproject.toml
Notebook/: Next_Word_Prediction_with_Deep_Learning_in_NLP.ipynb  Next_Word_Prediction_with_Deep_Learning_in_NLP_50epoch.ipynb  Next_Word_Prediction_with_Deep_Learning_in_NLP_with_metrics.ipynb  README.md
data/processed/: sherlock_holmes_clean.txt
src/next_word_prediction/: __init__.py  data.py  generate.py  model.py  train.py
